# hash_cmp

./: Cargo.toml  PKGBUILD  README.md
PKG/: hash-cmp
manpage/: hash-cmp.1  hash-cmp.1.md
src/: main.rs
